--- a/src/SistemaLogin/client/base.css
+++ b/src/SistemaLogin/client/base.css
@@ -19,11 +19,29 @@ body {
     padding-top: 40px;
 }
 
-@font-face { font-family: 'AbsolutHeadline'; src: url('fonts/absolut-headline.woff2') format('woff2'); }
-@font-face { font-family: 'Absolut'; src: url('fonts/absolut-regular.woff') format('woff'); }
-@font-face { font-family: 'AbsolutHandwritten'; src: url('fonts/absolut-handwritten-regular.woff') format('woff'); }
-@font-face { font-family: "EdwardianScript"; src: url("fonts/Edwardian Script ITC V1.woff2") format("woff2"); }
+@font-face { 
+    font-family: 'AbsolutHeadline'; 
+    src: url('/fonts/absolut-headline.woff2') format('woff2'); 
+    font-display: swap; 
+}
 
+@font-face { 
+    font-family: 'Absolut'; 
+    src: url('/fonts/absolut-regular.woff') format('woff'); 
+    font-display: swap; 
+}
+
+@font-face { 
+    font-family: 'AbsolutHandwritten'; 
+    src: url('/fonts/absolut-handwritten-regular.woff') format('woff'); 
+    font-display: swap; 
+}
+
+@font-face { 
+    font-family: "EdwardianScript"; 
+    src: url("/fonts/Edwardian Script ITC V1.woff2") format("woff2"); 
+    font-display: swap; 
+}
 /* =============================================
 2. HEADER / NAVBAR
 ============================================= */
