--- a/src/SistemaLogin/client/base.css
+++ b/src/SistemaLogin/client/base.css
@@ -6,7 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Absolut', sans-serif;
-    background-image: url("/Background/mobile_background_v2.png");
+    background-image: url("/bg/mobile_background_v2.png");
     background-repeat: repeat;
     color: #f0f0f0;
     width: 100%;
@@ -418,7 +418,7 @@ font-size: clamp(32px, 8vw, 50px);
 .conteudo-casa {
     order: 2;
     text-align: center;
-    background: url('/Background/white_background.png');
+    background: url('/bg/white_background.png');
     flex: 1 1 50%;
     padding: 1vw 2vw;
     border: black;
@@ -429,7 +429,7 @@ font-size: clamp(32px, 8vw, 50px);
 }
 
 .conteudo-casa:hover{
-    background: url('/Background/background_v4.png');
+    background: url('/bg/background_v4.png');
     color: white;
     box-shadow:0 8px 16px 0 rgba(0,0,0,0.6);
 }
@@ -784,7 +784,7 @@ background-color: #f0f0f0;
         margin: 0;
         padding: 0;
         font-family: 'Absolut', sans-serif;
-        background-image: url("/Background/background_v4.png");
+        background-image: url("/bg/background_v4.png");
         background-repeat: repeat;
         color: #f0f0f0;
         scroll-behavior: smooth;
@@ -1021,7 +1021,7 @@ background-color: #f0f0f0;
         order: 2;
         box-sizing: border-box;
         text-align: center;
-        background: url('/Background/white_background.png');
+        background: url('/bg/white_background.png');
         width: 300px;
         padding: 1vw 2vw;
         border: black;
@@ -1033,7 +1033,7 @@ background-color: #f0f0f0;
     }
 
     .conteudo-casa:hover{
-        background: url('/Background/background_v4.png');
+        background: url('/bg/background_v4.png');
         color: white;
         box-shadow:0 8px 16px 0 rgba(0,0,0,0.6);
     }
